Fix vertical alignment for calendar

--- a/app/assets/stylesheets/styles/calendar.scss
+++ b/app/assets/stylesheets/styles/calendar.scss
@@ -14,3 +14,17 @@
   flex-grow: 1;
   flex-basis: 0;
 }
+
+.cal-header {
+  flex-grow: 1;
+}
+
+.cal-weekdays {
+  flex-grow: 1;
+  flex-basis: 0;
+}
+
+.cal-dates {
+  flex-grow: 6;
+  flex-basis: 0;
+}
